# fst_classifier_tool

./: ARCHITECTURE.md  README.md  pyproject.toml  requirements.txt  使用教程.txt
checkpoints/: history.json
dataset/labels/: ground_empty_034.json  ground_empty_035.json  ground_empty_038.json  ground_empty_066.json  ground_empty_067.json  images (1).json  images.json  sample_001.json
fst/: __init__.py  app.py  dataset.py  export_onnx.py  inference.py  label_tool.py  models.py  network.py  schema_validate.py  train.py
schema/: fst.v1.schema.json
scripts/: build_exe.py  download_parking_images.py  evaluate.py
